--- a/Configuration/default.conf
+++ b/Configuration/default.conf
@@ -7,23 +7,22 @@ server {
     server_name localhost;
     client_max_body_size 99999999;
 
+
     location / {
-        limit_methods POST;
+        limit_methods GET;
         root www/42Porto;
-;
+
+
     }
     location /upload {
         limit_methods GET POST;
-        upload uploads;
+        upload /42upload;
+        cgi_path cgi;
+        cgi_ext .py;
     }
 
     location /delete {
-        root /to_delete;
+        root www/42Porto/to_delete;
         limit_methods DELETE;
-    }
-
-    location /cgi_get {
-        cgi_path cgi-bin;
-        cgi_ext .py;
     }
 }
